k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-redis
  namespace: sms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms-redis
  template:
    metadata:
      labels:
        app: sms-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: sms-redis
  namespace: sms
spec:
  selector:
    app: sms-redis
  ports:
    - port: 6379
      targetPort: 6379
